[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name= "forge"

[dependencies]
actix-web = "4.9.0"
reqwest = {version="0.12.7", features=["json"]}
serde = {version="1.0.210", features=["derive"]}
tokio = {version="1.40.0", features=["macros", "rt-multi-thread"]}

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
