[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name= "forge"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
askama = "0.12"
config = "0.14"
env_logger = "0.11"
log = "0.4"
reqwest = {version="0.12", features=["json", "cookies"]}
serde = {version="1", features=["derive"]}
serde-aux = "3"
tokio = {version="1", features=["macros", "rt-multi-thread"]}
uuid = {version="1", features=["v4"]}
jsonwebtoken = {version = "9"}
regex = "1"
csv = "1"
serde_json = "1"
chrono = {version="0.4", features=["serde"]}

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
	"tls-rustls"
]
